// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header Deflaut 1`] = `
<header
  className="sc-gtssRu hbxSRf"
>
  <div
    className="sc-dlnjPT fekCVg"
  >
    <div
      className="sc-hKFyIo ubFgx"
    >
      <div
        className="sc-eCApGN koHhxw"
      >
        DMM History
      </div>
    </div>
    <div
      className="sc-hKFyIo ubFgx"
    >
      <input
        aria-label="keyword"
        className="sc-bdnylx gcQRBt"
        onChange={[Function]}
        placeholder="キーワードから探す"
        type="text"
        value=""
      />
    </div>
  </div>
</header>
`;

exports[`Storyshots HistoryList Deflaut 1`] = `
<div
  className="sc-iqAbSa hLSYkK"
>
  <div
    className="sc-dIsAE gXeHJS"
  >
    <div
      className="sc-bqGHjH iibSUP"
    >
      <a
        className="sc-jSFkmK bmiOSP"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          aria-label="削除する"
          className="sc-iCoHVE gAvwZB"
          onClick={[Function]}
        />
        <figure
          className="sc-gKAblj bmdswN"
        >
          <img
            alt=""
            src="https://dummyimage.com/200x300/000/fff"
          />
        </figure>
        <p
          className="sc-fujyUd ldOjxy"
        >
          良い作品
        </p>
        <div
          className="sc-pNWxx VQBmL"
        >
          <span
            className="sc-jrsJCI lbxhhj"
          >
            ¥100〜¥300
          </span>
        </div>
      </a>
    </div>
    <div
      className="sc-bqGHjH iibSUP"
    >
      <a
        className="sc-jSFkmK bmiOSP"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          aria-label="削除する"
          className="sc-iCoHVE gAvwZB"
          onClick={[Function]}
        />
        <figure
          className="sc-gKAblj bmdswN"
        >
          <img
            alt=""
            src="https://dummyimage.com/200x300/000/fff"
          />
        </figure>
        <p
          className="sc-fujyUd ldOjxy"
        >
          良い作品
        </p>
        <div
          className="sc-pNWxx VQBmL"
        >
          <span
            className="sc-jrsJCI lbxhhj sale"
          >
            ¥50〜¥150
          </span>
          <span
            className="sc-kEqYlL vIvII"
          >
            50
            %OFF
          </span>
        </div>
      </a>
    </div>
    <div
      className="sc-bqGHjH iibSUP"
    >
      <a
        className="sc-jSFkmK bmiOSP"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          aria-label="削除する"
          className="sc-iCoHVE gAvwZB"
          onClick={[Function]}
        />
        <figure
          className="sc-gKAblj bmdswN"
        >
          <img
            alt=""
            src="https://dummyimage.com/200x300/000/fff"
          />
        </figure>
        <p
          className="sc-fujyUd ldOjxy"
        >
          良い作品
        </p>
        <div
          className="sc-pNWxx VQBmL"
        >
          <span
            className="sc-jrsJCI lbxhhj sale"
          >
            ¥50〜¥150
          </span>
          <span
            className="sc-kEqYlL vIvII"
          >
            50
            %OFF
          </span>
        </div>
      </a>
    </div>
    <div
      className="sc-bqGHjH iibSUP"
    >
      <a
        className="sc-jSFkmK bmiOSP"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          aria-label="削除する"
          className="sc-iCoHVE gAvwZB"
          onClick={[Function]}
        />
        <figure
          className="sc-gKAblj bmdswN"
        >
          <img
            alt=""
            src="https://dummyimage.com/200x300/000/fff"
          />
        </figure>
        <p
          className="sc-fujyUd ldOjxy"
        >
          良い作品
        </p>
        <div
          className="sc-pNWxx VQBmL"
        >
          <span
            className="sc-jrsJCI lbxhhj"
          >
            ¥100〜¥300
          </span>
        </div>
      </a>
    </div>
    <div
      className="sc-bqGHjH iibSUP"
    >
      <a
        className="sc-jSFkmK bmiOSP"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          aria-label="削除する"
          className="sc-iCoHVE gAvwZB"
          onClick={[Function]}
        />
        <figure
          className="sc-gKAblj bmdswN"
        >
          <img
            alt=""
            src="https://dummyimage.com/200x300/000/fff"
          />
        </figure>
        <p
          className="sc-fujyUd ldOjxy"
        >
          良い作品
        </p>
        <div
          className="sc-pNWxx VQBmL"
        >
          <span
            className="sc-jrsJCI lbxhhj"
          >
            ¥100〜¥300
          </span>
        </div>
      </a>
    </div>
    <div
      className="sc-bqGHjH iibSUP"
    >
      <a
        className="sc-jSFkmK bmiOSP"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          aria-label="削除する"
          className="sc-iCoHVE gAvwZB"
          onClick={[Function]}
        />
        <figure
          className="sc-gKAblj bmdswN"
        >
          <img
            alt=""
            src="https://dummyimage.com/200x300/000/fff"
          />
        </figure>
        <p
          className="sc-fujyUd ldOjxy"
        >
          良い作品
        </p>
        <div
          className="sc-pNWxx VQBmL"
        >
          <span
            className="sc-jrsJCI lbxhhj"
          >
            ¥100〜¥300
          </span>
        </div>
      </a>
    </div>
    <div
      className="sc-bqGHjH iibSUP"
    >
      <a
        className="sc-jSFkmK bmiOSP"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          aria-label="削除する"
          className="sc-iCoHVE gAvwZB"
          onClick={[Function]}
        />
        <figure
          className="sc-gKAblj bmdswN"
        >
          <img
            alt=""
            src="https://dummyimage.com/200x300/000/fff"
          />
        </figure>
        <p
          className="sc-fujyUd ldOjxy"
        >
          良い作品
        </p>
        <div
          className="sc-pNWxx VQBmL"
        >
          <span
            className="sc-jrsJCI lbxhhj"
          >
            ¥100〜¥300
          </span>
        </div>
      </a>
    </div>
    <div
      className="sc-bqGHjH iibSUP"
    >
      <a
        className="sc-jSFkmK bmiOSP"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          aria-label="削除する"
          className="sc-iCoHVE gAvwZB"
          onClick={[Function]}
        />
        <figure
          className="sc-gKAblj bmdswN"
        >
          <img
            alt=""
            src="https://dummyimage.com/200x300/000/fff"
          />
        </figure>
        <p
          className="sc-fujyUd ldOjxy"
        >
          良い作品
        </p>
        <div
          className="sc-pNWxx VQBmL"
        >
          <span
            className="sc-jrsJCI lbxhhj"
          >
            ¥100〜¥300
          </span>
        </div>
      </a>
    </div>
    <div
      className="sc-bqGHjH iibSUP"
    >
      <a
        className="sc-jSFkmK bmiOSP"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          aria-label="削除する"
          className="sc-iCoHVE gAvwZB"
          onClick={[Function]}
        />
        <figure
          className="sc-gKAblj bmdswN"
        >
          <img
            alt=""
            src="https://dummyimage.com/200x300/000/fff"
          />
        </figure>
        <p
          className="sc-fujyUd ldOjxy"
        >
          良い作品
        </p>
        <div
          className="sc-pNWxx VQBmL"
        >
          <span
            className="sc-jrsJCI lbxhhj"
          >
            ¥100〜¥300
          </span>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots HistoryList Not Found 1`] = `
<div
  className="sc-iqAbSa sc-crzoUp hLSYkK pMMKZ"
>
  <p>
    絞り込み条件に一致する商品は見つかりませんでした。
  </p>
</div>
`;

exports[`Storyshots HistoryListItem Deflaut 1`] = `
<div
  className="sc-iqAbSa hLSYkK"
>
  <div
    className="sc-dIsAE gXeHJS"
  >
    <div
      className="sc-bqGHjH iibSUP"
    >
      <a
        className="sc-jSFkmK bmiOSP"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          aria-label="削除する"
          className="sc-iCoHVE gAvwZB"
          onClick={[Function]}
        />
        <figure
          className="sc-gKAblj bmdswN"
        >
          <img
            alt=""
            src="https://dummyimage.com/200x300/000/fff"
          />
        </figure>
        <p
          className="sc-fujyUd ldOjxy"
        >
          良い作品
        </p>
        <div
          className="sc-pNWxx VQBmL"
        >
          <span
            className="sc-jrsJCI lbxhhj"
          >
            ¥100〜¥300
          </span>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots HistoryListItem Sale 1`] = `
<div
  className="sc-iqAbSa hLSYkK"
>
  <div
    className="sc-dIsAE gXeHJS"
  >
    <div
      className="sc-bqGHjH iibSUP"
    >
      <a
        className="sc-jSFkmK bmiOSP"
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          aria-label="削除する"
          className="sc-iCoHVE gAvwZB"
          onClick={[Function]}
        />
        <figure
          className="sc-gKAblj bmdswN"
        >
          <img
            alt=""
            src="https://dummyimage.com/200x300/000/fff"
          />
        </figure>
        <p
          className="sc-fujyUd ldOjxy"
        >
          すごい作品
        </p>
        <div
          className="sc-pNWxx VQBmL"
        >
          <span
            className="sc-jrsJCI lbxhhj sale"
          >
            ¥50〜¥150
          </span>
          <span
            className="sc-kEqYlL vIvII"
          >
            50
            %OFF
          </span>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Deflaut 1`] = `
<input
  aria-label="keyword"
  className="sc-bdnylx gcQRBt"
  onChange={[Function]}
  placeholder="キーワードから探す"
  type="text"
  value=""
/>
`;

exports[`Storyshots SearchResultStats Deflaut 1`] = `
<div
  className="sc-hBMVcZ dRmHHn"
>
  <span>
    すごい作品 100件
  </span>
</div>
`;

exports[`Storyshots SearchResultStats Not Exists 1`] = `
<div
  className="sc-hBMVcZ dRmHHn"
>
  <span>
    0件
  </span>
</div>
`;
